--- a/ambiente-docker/dockerfile
+++ b/ambiente-docker/dockerfile
@@ -1,16 +1,27 @@
 FROM ubuntu:latest
 
+# Atualiza os pacotes e instala Python, pip, o módulo de virtualenv e git
 RUN apt-get update && \
-    apt-get install -y python3 python3-pip
+    apt-get install -y python3 python3-pip python3-venv git
 
-RUN pip3 install  flask os socket time random trading heapq
+# Cria um ambiente virtual Python em /opt/venv
+RUN python3 -m venv /opt/venv
 
-COPY . /camada-aplicacao
-COPY . /camada-enlace-dados
-COPY . /camada-fisica
-COPY . /camada-rede
-COPY . /camada-trasporte
+# Ativa o ambiente virtual e instala os pacotes necessários
+RUN /opt/venv/bin/pip install flask
 
+# Define o ambiente virtual como o Python padrão
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Define o diretório de trabalho
 WORKDIR /app
 
-CMD ["python3"]
+# Clona o repositório na pasta /app
+RUN git clone https://github.com/leonardo8787/aproveitamento-PCD
+
+# Define o diretório de trabalho para dentro do repositório clonado (opcional)
+WORKDIR /app/aproveitamento-PCD
+
+# Comando padrão para entrar no terminal do container
+CMD ["/bin/bash"]
+
